--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,12 +14,15 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
+    "concurrently": "^8.0.1",
+    "nodemon": "^3.1.0",
     "typescript": "^5.8.3"
   }
 }
