--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   backend:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     container_name: backend
     ports:
@@ -25,7 +25,23 @@ services:
     networks:
       - app-network
     volumes:
-      - .:/app
+      - ./backend:/app
+      - /app/node_modules
+    command: npm run dev
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "5173:5173"
+    depends_on:
+      - backend
+    networks:
+      - app-network
+    volumes:
+      - ./frontend:/app
       - /app/node_modules
     command: npm run dev
 
@@ -34,4 +50,3 @@ networks:
     driver: bridge
 
 volumes:
-  mongo_data:
